8217223: [lworld][c1] monitorenter on value object should throw IllegalMonitorStateException
Reviewed-by: thartmann